# cocore

./: .gitignore  .mcp.json  .oxfmtrc.json  .oxlintrc.json  CLAUDE.md  Makefile  README.md  hk.pkl  knip.jsonc  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.cursor/rules/: console-effect-ts.mdc  console-tanstack-api.mdc
.github/workflows/: ci.yml  provider-pr-build.yml  release.yml
docs/: deploy-railway.md  install-mac.md  launch-day-runbook.md  mda-companion-binary.md  secure-release.md
docs/adr/: 0001-d-inference-delta.md  0001-services-resilience.md
fixtures/: stream-resume-vectors.json
infra/: Dockerfile.node  README.md  bootstrap-dev.ts  docker-compose.yml  seed-account-dev.ts  seed-dev-stack.ts  smoke.ts
infra/advisor/: Dockerfile  (+2 more)
lexicons/: README.md
provider/: Cargo.toml  build.rs
provider-shell/: Package.swift  README.md
scripts/: _dispatch_body.py  _dispatch_decode.py  _dispatch_pick.py  _dispatch_seal.py  bootstrap-python-venv.sh  build-confidential-worker.sh  build-mac-app.sh  configure-pr-env.sh  dev-provider.sh  dev.cocore.provider.plist.template  dev.sh  dispatch-job.sh  extract-cdhash.sh  generate-atproto-jwk.sh  install-from-tarball.sh  install-mac-provider.sh  lex-codegen.ts  make-app-icon.swift  notarize-mac-app.sh  openai-e2e.py  publish-lexicons.sh  register-known-good.sh  tool-calling-fullstack-e2e.py  uninstall-mac-provider.sh
sdk/py/: pyproject.toml
sdk/py/cocore/: __init__.py  appattest.py  canonical.py  mda.py  p256.py  seal.py  verify.py
sdk/py/tests/: test_appattest.py  test_verify.py
(+141 files in other folders)
