[project]
name = "cocore"
version = "0.1.0"
description = "co/core Python SDK — publish + verify dev.cocore.compute.* records, including the fail-closed confidential-tier provider verifier."
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42",
    "pynacl>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cocore*"]
